# ssis-migration

./: LICENSE  README.md  plugin.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/plugin/: marketplace.json
plugins/dacpac-analyzer/: README.md
plugins/spec-writer/: README.md
plugins/ssis-analyzer/: README.md  SKILL.md
plugins/ssis-analyzer/scripts/: analyze.py  loader.py  lookups.py  xml_helpers.py
skills/ssis-analyzer/scripts/: cross_reference.py  knowledge.py  lookups.py  models.py  normalizers.py  ordering.py  xml_helpers.py
tests/: conftest.py  test_analyze_cli.py  test_extract_configurations.py  test_extract_connections.py  test_extract_log_providers.py  test_extract_metadata.py  test_extract_parameters.py  test_extract_variables.py  test_knowledge.py  test_loader_integration.py  test_lookups.py  test_models.py  test_normalizers.py  test_ordering.py  test_real_control_flow.py  test_real_cross_reference.py  test_real_dataflow.py  test_xml_helpers.py
tests/fixtures/: github-ssis-repos.md
tests/fixtures/CRM-ETL/: AccountGetDump.dtsx  AccountLoad.dtsx  AccountLocation_Update.dtsx  AccountLookupupdate.dtsx  AccountUpdate.dtsx  AgreementBookingProductGetDump.dtsx  AgreementBookingProductLoad.dtsx  AgreementBookingProductUpdate.dtsx  AgreementBookingSetupGetDump.dtsx  AgreementBookingSetupLoad.dtsx  AgreementBookingSetupUpdate.dtsx  AgreementGetDump.dtsx  AgreementLoad.dtsx  AgreementUpdate.dtsx  ContactGetDump.dtsx  ContactLoad.dtsx  ContactUpdate.dtsx  CustomerAssetGetDump.dtsx  CustomerAssetLoad.dtsx  CustomerAssetUpdate.dtsx  (+31 more)
(+53 files in other folders)
