[project]
name = "ssis-analyzer"
version = "0.1.0"
description = "SSIS .dtsx package analyzer skill"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
